# Dec 12, 2025 (Alpha 1.7.3)
fixed a bug where finishing a replay caused the page to be unable to step replays until reloaded
added custom team colors
added ability to store arbitrary metadata in replay files

# Dec 10, 2025 (Alpha 1.7.2)
bot names are now displayed in the joined list
the joined list now has a maximum width for names, hover on a name to see the full name if it's clipped
allowed "kick" button to be used once game starts
fixed issue where certain event handlers stayed attached to websockets when they should have been removed

# Dec 9, 2025 (ALPHA 1.7.1)
fixed bots and added optimized board evaluation
fixed memory limits not working for bots
bot freya now searches up to 255 moves in the future (scales down with board size to 5 moves on 36x36 boards)

# Dec 6, 2025 (Alpha 1.7.0)
account emails are now hidden by default, and can be shown by pressing a button
added settings page
added name change UI
added flags for restricting who can send a friend request to an account (NOTE: all requests are enabled by default)
added icons to the friend request buttons
friend requests now supported
added community page
fixed an issue with incorrect endpoints being used for accounts
fixed a few issues related to bots
created development environment

# Nov 26, 2025 (Alpha 1.6.1)
fixed an issue that caused replay files for boards over 32 tiles or with more than 7 players to be generated with irrecoverable missing data

# Nov 25, 2025 (Alpha 1.6.0)
bot freya now limited to 20 move lookahead
maximum board size decreased to 15x15
ghost bots fixed
active player leaving no longer causes soft lock
players can no longer be assigned to the neutral team
using the back button to navigate page history no longer results in "game not found" error when creating a room

# Nov 24, 2025 (Alpha 1.5.2)
updated cookie disclosure to clarify what information is sent to the server

# Nov 24, 2025 (Alpha 1.5.1)
added ability to reset your password